more header refinement on mobile; styling fixes to accounts pages

--- a/src/components/Accounts/Credits/CreditsSummary.module.css
+++ b/src/components/Accounts/Credits/CreditsSummary.module.css
@@ -28,13 +28,12 @@
   margin: 0;
   margin-top: 0.5rem;
   display: flex;
-  align-items: center;
+  align-items: baseline;
 }
 
 .data h5 {
   color: green;
   margin: -0.5rem 0 1rem;
-  font-size: 1.5rem;
 }
 
 @media only screen and (max-width: 568px) {
