--- a/src/components/Layout/Header/MainNavBar.module.css
+++ b/src/components/Layout/Header/MainNavBar.module.css
@@ -94,16 +94,6 @@
     font-size: 1rem;
   }
 }
-/* 
-@media only screen and (max-width: 550px) {
-  .nav-dropdown {
-    margin: 0.5rem;
-  }
-
-  .nav-dropdown h2 {
-    font-size: 1.7rem;
-  }
-}
 
 @media only screen and (max-width: 500px) {
   .main-nav {
@@ -112,7 +102,7 @@
   }
 
   .nav-dropdown {
-    margin: 0 auto;
+    margin: 0;
   }
 
   .nav-dropdown h2 {
@@ -122,4 +112,4 @@
   .dropdown-content .link {
     font-size: 0.9rem;
   }
-} */
+}
