--- a/src/components/Layout/Header/MyPurseButton.module.css
+++ b/src/components/Layout/Header/MyPurseButton.module.css
@@ -38,7 +38,6 @@
 
 .dropdown-content {
   position: absolute;
-  margin-left: 1rem;
   padding: 0.75rem;
   border-radius: 4px;
   background-color: beige;
@@ -128,26 +127,26 @@
   .button-container {
     text-align: center;
   }
-}
-/* 
-@media only screen and (max-width: 500px) {
-  .button-container {
-    margin-top: -0.4rem;
-  }
-
-  .button-container button {
-    font-size: 1.2rem;
-  }
 
   .dropdown-content {
-    padding: 0.5rem;
-  }
-
-  .link {
-    font-size: 0.9rem;
+    text-align: center;
   }
 
   .dropdown-content button {
-    font-size: 0.9rem;
+    margin: 0.5rem 0;
   }
-} */
+}
+
+@media only screen and (max-width: 500px) {
+  .button-container button {
+    font-size: 1.1rem;
+  }
+
+  .link {
+    font-size: 1rem;
+  }
+
+  .dropdown-content button {
+    font-size: 1rem;
+  }
+}
