--- a/src/components/Layout/Header/TopNavBar.module.css
+++ b/src/components/Layout/Header/TopNavBar.module.css
@@ -36,7 +36,7 @@
   font-weight: bold;
   text-align: right;
   display: none;
-  z-index: 3;
+  z-index: 7;
 }
 
 .dropdown-container img {
@@ -78,24 +78,23 @@
     justify-content: center;
   }
 }
-/* 
+
 @media only screen and (max-width: 500px) {
   .top-nav {
     font-size: 1.1rem;
-    margin: 0.25rem auto;
   }
 
   .top-nav span {
-    margin: 0.2rem;
+    margin: 0 -0.5rem;
   }
 
   .dropdown img {
-    width: 22px;
-    height: 22px;
-    margin-bottom: 0.1rem;
+    width: 20px;
+    height: 20px;
+    margin: 0 0.5rem 0.1rem 1rem;
   }
 
   .dropdown-container {
     font-size: 0.9rem;
   }
-} */
+}
