--- a/src/pages/MyPurseHome.module.css
+++ b/src/pages/MyPurseHome.module.css
@@ -129,3 +129,17 @@
     font-size: 1.4rem;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .layout {
+    padding-bottom: 0;
+  }
+
+  .main-title h1 {
+    font-size: 2.5rem;
+  }
+
+  .table * {
+    font-size: 1.2rem;
+  }
+}
